# logrs

./: Cargo.toml  LICENSE  README.md  TODO
src/: config.rs  dispatcher.rs  io.rs  list.rs  logger.rs  main.rs  parser.rs  search.rs  show.rs
src/lib/: parser.rs
